feat: add Admin Controls, Map Locate Command, Improve Rocket Jump, Weapon Balance